# e4s-alc

./: .gitignore  .readthedocs.yaml  CHANGELOG  LICENSE  Makefile  README.md  pyproject.toml  setup.py  tox.ini
docs/: conf.py  configuration_file.rst  how_it_works.rst  index.rst  quickstart.rst  requirements.txt  user_directory.rst
docs/_build/doctrees/: authors.doctree  configuration_file.doctree  environment.pickle  how_it_works.doctree  index.doctree  installation.doctree  quickstart.doctree  user_directory.doctree  what_is_e4s_alc.doctree
docs/_build/html/: .buildinfo  authors.html  configuration_file.html  genindex.html  how_it_works.html  index.html  installation.html  objects.inv  quickstart.html  search.html  searchindex.js  user_directory.html  what_is_e4s_alc.html
docs/_static/css/: main.css
docs/backends/: docker.rst  podman.rst  singularity.rst
docs/basics/: alc_parameters.rst  basic_usage.rst  getting_started.rst  introduction.rst  supported_software.rst  tutorial_101.rst  tutorial_matrix.rst  yaml_parameters.rst
docs/developer/: supporting_os_version.rst
docs/general/: contributing.rst  use_cases.rst
docs/reference/: add.rst  create.rst  creating_a_buildcache.rst  delete.rst  init.rst  list.rst  using_a_buildcache.rst  using_spack_yaml.rst
e4s_alc/: __init__.py  logger.py
e4s_alc/cli/: __main__.py  add.py  cli.py  cli_view.py  command.py  create.py  entry.py  list.py
e4s_alc/cli/commands/: __init__.py  add.py  build.py  command.py  create.py  delete.py  init.py  list.py  template.py
e4s_alc/conf/: __init__.py  modules.yaml
e4s_alc/controller/: __init__.py  compiler.py  controller.py
e4s_alc/controller/backend/: __init__.py  backend.py  docker.py  podman.py  singularity.py
e4s_alc/controller/image/: __init__.py  centos.py  image.py  rhel.py  rocky.py  sles.py  suse.py  ubuntu.py
e4s_alc/database/: __init__.py  create.py  edit.py
e4s_alc/model/: __init__.py  add.py  build.py  create.py  create_definitionfile.py  create_dockerfile.py  delete.py  init.py  list.py  model.py
e4s_alc/model/container/: .docker.py.swp  .podman.py.swp  .singularity.py.swp  __init__.py  docker.py  podman.py  singularity.py
e4s_alc/mvc/: controller.py  model.py
e4s_alc/util/: __init__.py  exceptions.py  logger.py
examples/: ubuntu-latest.json
examples/matrix/: matrix-kokkos.yaml
examples/rhel8/: rhel8-gcc11.2-kokkos.yaml  rhel8-gcc11.2-trilinos.yaml  tcl_e4s_mirror.yaml  tcl_e4s_mirror_docker.yaml
examples/suse/: kokkos-build-specs.yaml
examples/ubuntu/: light_spack.yaml  light_ubuntu@20.04-yaml.yaml  singularity_light_ubuntu-yaml.yaml  singularity_light_ubuntu_gcc10.3-yaml.yaml  singularity_light_ubuntu_gcc10.3_fulltemplate.yaml  singularity_ubuntu_clang-yaml.yaml  singularity_ubuntu_gcc10.3-yaml.yaml  singularity_ubuntu_oneapi-yaml.yaml  spack.yaml  ubuntu-gcc10.3-yaml.yaml  ubuntu-gcc10.3.yaml
scripts/: e4s-alc
tests/: test_controller.py  test_create.py  test_docker.py  test_model.py  test_podman.py  test_singularity.py  todo_singularity.py
tests/assets/: config.ini  config_modify.ini  test_spack.yaml  testconfig.json
(+85 files in other folders)
