[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "e4s-alc"
authors = [
    {name = "Cameron Durbin", email = "cfd@uoregon.edu"},
    {name = "Frederick Deny", email = "fdeny@uoregon.edu"},
]
description = "Build containers quickly with Spack integration."
readme = "README.md"
requires-python = ">=3.7"
keywords = ["containers", "hpc", "libraries", "linux"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Science/Research",
    "License :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
]
dependencies = ['docker', 'podman', 'spython', 'prettytable', 'python-dateutil']
dynamic = ["version"]

[project.urls]
repository = "https://github.com/E4S-Project/e4s-alc.git"

[tool.setuptools]
packages = ["e4s_alc"]

[project.scripts]
e4s-alc = "e4s_alc.cli.entry:main"

[tool.setuptools_scm]
write_to = "e4s_alc/version.py"
